# practices

./: README.md
solution/Client/header-only/: CMakeLists.txt  Validator.h  bindings.cpp  main.py
solution/Client/so/: CMakeLists.txt
solution/LSclient/: CMakeLists.txt  main.cpp
solution/Validator/: CMakeLists.txt
solution/Validator/dynamic_link/: Validator.cpp  Validator.h
solution/Validator/header-only/: Validator.h
solution/ls-proxy/: CMakeLists.txt  proxy.cpp
solution/project_1/: CMakeLists.txt  main.cpp  path.ini  project_1.kdev4  settings.ini  timings.ini
solution/project_1/.kdev4/: project_1.kdev4
solution/project_2/client/: CMakeLists.txt
solution/project_2/client/html/: index.html
solution/project_2/client/src/: main.cpp
solution/work1/: CMakeLists.txt  main.cpp  timings.ini  work1.kdev4
solution/work1/.kdev4/: work1.kdev4
solution/work1/inih-master/: inih-master.kdev4
solution/work2/Client/Client_h/: CMakeLists.txt  main.cpp
solution/work2/Client/Client_h/ValiDator/src/: ValiDator.h
solution/work2/Client/Client_h/Work2_QT/: .gitignore  CMakeLists.txt  ValiDator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
solution/work2/Client/Client_so/: CMakeLists.txt  main.cpp
solution/work2/Client/Client_so/Work2_QT/: CMakeLists.txt  Work2_QT_ru_RU.ts  main.cpp  mainwindow.cpp
solution/work2/ValiDator/: .gitignore  CMakeLists.txt  head_only.sh
solution/work2/ValiDator/header_only/: ValiDator.h
solution/work2/ValiDator/src/: ValiDator.cpp  ValiDator.h
solution/work2/ValiDator/tests/: TestCreditCardNumberValidator.cpp  TestPassportValidator.cpp  TestPhoneNumberValidator.cpp
tasks/: 1-светофор.md  2-validator.md  3-ls.md  4-formatter.md
